[gd_scene load_steps=10 format=3 uid="uid://cysyg1tuw6eja"]

[ext_resource type="Texture2D" uid="uid://bh0k6d508f85p" path="res://placeholders/placeholderimg title.png" id="1_dtc03"]
[ext_resource type="Script" path="res://game/scripts/main_menu.gd" id="1_k8086"]
[ext_resource type="Texture2D" uid="uid://cw2ju71tu6chr" path="res://placeholders/placeholderimg cont.png" id="2_hutsu"]
[ext_resource type="Texture2D" uid="uid://b7wqu0ifikm15" path="res://placeholders/placeholderimg bg.png" id="3_hqdqm"]
[ext_resource type="Texture2D" uid="uid://dq1qaa65nk1f7" path="res://placeholders/placeholderimg newgame.png" id="4_a7boa"]
[ext_resource type="Texture2D" uid="uid://dtsi3y8bqyxi0" path="res://placeholders/placeholderimg options.png" id="5_3oxcb"]
[ext_resource type="Texture2D" uid="uid://dj3kqwajgi4af" path="res://placeholders/placeholderimg quit.png" id="7_756h4"]

[sub_resource type="Animation" id="Animation_wga16"]
resource_name = "Fade"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8pc8m"]
_data = {
"Fade": SubResource("Animation_wga16")
}

[node name="MainMenu" type="Control"]
layout_mode = 3
anchor_right = 2.231
anchor_bottom = 2.54
offset_right = -2363.52
offset_bottom = -1663.2
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_k8086")

[node name="MenuBackground" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.737
anchor_bottom = 0.5
offset_right = 504.96
offset_bottom = 540.0
texture = ExtResource("3_hqdqm")
expand_mode = 1

[node name="MenuContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.062
anchor_bottom = 1.072
offset_left = 4.0
offset_top = -102.0
offset_right = -115.04
offset_bottom = 49.24
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="TitleBox" type="VBoxContainer" parent="MenuContainer"]
layout_mode = 2
theme_override_constants/separation = 60

[node name="WindowSeparator" type="Control" parent="MenuContainer/TitleBox"]
layout_mode = 2

[node name="Title" type="TextureRect" parent="MenuContainer/TitleBox"]
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("1_dtc03")
stretch_mode = 2

[node name="CenterButtons" type="HBoxContainer" parent="MenuContainer"]
layout_mode = 2
alignment = 1

[node name="Buttons" type="VBoxContainer" parent="MenuContainer/CenterButtons"]
layout_mode = 2
alignment = 1

[node name="TitleSeparator" type="Control" parent="MenuContainer/CenterButtons/Buttons"]
custom_minimum_size = Vector2(0, 400)
layout_mode = 2

[node name="Continue" type="Button" parent="MenuContainer/CenterButtons/Buttons"]
visible = false
layout_mode = 2
icon = ExtResource("2_hutsu")
flat = true
icon_alignment = 1

[node name="NewGame" type="Button" parent="MenuContainer/CenterButtons/Buttons"]
layout_mode = 2
icon = ExtResource("4_a7boa")
flat = true
icon_alignment = 1

[node name="Options" type="Button" parent="MenuContainer/CenterButtons/Buttons"]
visible = false
layout_mode = 2
icon = ExtResource("5_3oxcb")
flat = true
icon_alignment = 1

[node name="Quit" type="Button" parent="MenuContainer/CenterButtons/Buttons"]
layout_mode = 2
icon = ExtResource("7_756h4")
flat = true
icon_alignment = 1

[node name="VersionSeparator" type="Control" parent="MenuContainer/CenterButtons/Buttons"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="Label" type="Label" parent="MenuContainer/CenterButtons/Buttons"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Version 0.0.1a"
horizontal_alignment = 1

[node name="Fade" type="ColorRect" parent="."]
visible = false
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = -1
anchor_right = 1.136
anchor_bottom = 1.125
offset_right = 0.647949
color = Color(0, 0, 0, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Fade"]
libraries = {
"": SubResource("AnimationLibrary_8pc8m")
}

[connection signal="button_down" from="MenuContainer/CenterButtons/Buttons/Continue" to="." method="_on_continue_button_down"]
[connection signal="button_down" from="MenuContainer/CenterButtons/Buttons/NewGame" to="." method="_on_new_game_button_down"]
[connection signal="button_down" from="MenuContainer/CenterButtons/Buttons/Quit" to="." method="_on_quit_button_down"]
